<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="kamien"
                android:text="@string/stringButton6"
                android:fontFamily="@font/kavivanarregular"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="papier"
                android:text="@string/stringButton7"
                android:fontFamily="@font/kavivanarregular"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="nozyce"
                android:text="@string/stringButton8"
                android:fontFamily="@font/kavivanarregular"/>

        </LinearLayout>

        <!--<EditText
            android:id="@+id/licznik2"
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/kavivanarregular"
            android:inputType="textPersonName"
            android:text="@string/stringText3"
            android:textStyle="bold" />-->
        <TextView
            android:id="@+id/licznik"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/kavivanarregular"
            android:text="@string/stringText3"
            android:textStyle="bold" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>